Changed how tasks and child tasks are structured

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,15 @@
 This document keeps track of all changes as well as considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+5/21/2020:
+	Rewrote how antmanagers store child tasks. AntManagers themselves no longer store their children; rather Managers will have a tree of tasks and their child tasks. This makes a lot more sense because Managers need to know about a task and its children while AntManagers only interact with their children when splitting.
+
+5/14/2020:
+	Decided to not remove the parentTask pointer in Manager because the parentTask isn't always the same as the currentTask's parent. (ie: when we split, the current task is still the old current task but the parentTask is now also the current task.)
+	Changed AntManager::smartThis from a smart pointer to a weak pointer. The reason for this is because upon deleting an AntManager, it's smart pointer would still exist and would prevent the object from being deleted. A weak pointer fixes this problem but now AntManagers must now take a shared_ptr of themselves into their constructor so they can initialize smartThis.
+5/4/2020:
+	The ability to move ants in the opposite direction of the selected point has been removed. I don't think this feature will be used as ants moving away from a point is kind of niche. It was originally used to allow ants to dodge attacks but it's more effective to just move away from them. The feature still technically exists but doesn't do anything; it may be added in later.
+	Added a member variable called smartThis to AntManager. This is an interesting concept; it's a shared_ptr of the "this" pointer, meaning every AntManager has a smart pointer pointing to themselves. This is actually very useful, as we now always know where the smart pointer of a particular AntManager is stored. This can be seen in the split function, where an AntManager must pass itself to its children.
+
 4/7/2020:
 	Because the UI needs to render selected entities onto a set point of the screen but the entities also need to be rendered onto their correct spot on the world, many functions that render objects had to take in a parameter to determine whether to render in an absolute position or to a world position. This is cluncky because we'd have to rewrite every render function with an additional boolean parameter. The truth is, every render function follows a pattern: if it's called when rendering world stuff, it's rendered to the world position and if it's called when rendering UI stuff, it's rendered in an absolute position. If that's the case, we can just create a static boolean variable that determines whether or not something is rendered to the world or to the absolute based on what we are currently rendering. We already have the GameWindow::update function divided into such functions so adding this boolean variable is simple. We'll call it  GameWindow::renderAbsolute. All we have to do now is ensure that every render call is a GameWindow render call, such as GameWindow::requestNGon. As of now, GameWindow::requestNGon and GameWindow::requestRect still allow entities to choose to render absolute if they so choose. This bool will override a false GameWindow::renderAbsolute. You can think of it as:
 	if (bool || renderAbsolute) 
