Levels will now generate without inaccessible areas and will spawn shards. When all 5 shards are collected, a portal appears that spawns the next level

--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,18 @@
 This document keeps track of all changes as well as considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+7/25/2020:
+	Decided against giving Chunks private members and getters. Even though Chunks are getting more complicated, most of the interaction with outside classes is still done through the Map class. As a result, Chunk will remain an extension of the Map class rather than an independent class.
+
+7/17/2020:
+	There are currently two ways to render Polygons in Ants game: translate the point and then render it with PolyRender or pass a raw point to GameWindow which then translates the point before passing it to PolyRender. Essentially, it's a question of whether or not the point should be translated before being passed to a RenderComponent's render function or after. The answer used to always be "after"; we'd take whatever screen point we wanted to render something to and pass it to a RenderComponent, which would pass it to GameWindow which would handle translating the point to the right spot. Our reliance on GameWindow to render everything is show with GameWindow::renderAbsolute, which exists so whenever we called GameWindow::requestNGon/requestRect, we'd know whether or not to render it in an absolute spot or in spot relative to the camera without additional parameters. With AnimationComponents in the game, it is more obvious the flaw with this approach, which is that we need to write a GameWindow equivalent of AnimationWrapper::request. In fact, we would need to write a GameWindow equivalent to every request function, including PolyRender::requestLine and FontWrapper::requestWrite. The truth is, all the Gamewindow render functions do are translate a point and then pass it onto the equivalent render.h function. It would save time if we just translated the point beforehand by using the GameWindow camera and then passing the point to the render.h function ourselves. Essentially, we're getting rid fo the middle man that is GameWindow. The most notable function that will still use GameWindow render functions is renderMeter. renderMeter is a strange function in the sense that it already knows the height of the rect at all times but this height is somewhat inaccurate because of camera zoom and how sometimes we want to render the rect in an absolute position. Having GameWindow handle all makes life easier.
+
+7/12/2020:
+	AnimationParameter is now a separate class from SpriteParameter and Animation requests now consist of both a Sprite Parameter and Animation Parameter. This just makes life easier because otherwise, AnimationParameter would just be one bit struct that requires you to set all the SpriteParameter values before setting the Animation Parameter values. Dividing them makes it easier and it makes sense since Animations are literally just collections of sprites. The SpriteParameter is about how to render the frame and the AnimationParameter is about which frame to render.	
+	Added a new constructor to Object and Unit. This new constructor instead takes in arguments for the rectComponent, RenderComponent, and HealthComponent rather than a component. This forces the constructor to construct the components which is safer because as it ensures the entity will be initialized by the time the components are created.
+Example: Object* obj = new Object(*(new RectComponent({1,1,1,1},*obj))); 
+This is unsafe as obj hasn't been initialized yet. 
+	Decided against having Entity::addComponent() take in a pointer rather than a reference. The argument passed into addComponent should always be a heap object which may imply that the argument should take in a pointer but we only want non-null pointers, where it makes more sense to take in a reference. While this means that taking in a reference to a locally allocated object will cause an error, so too will taking in a pointer to a locally allocated object. Both methods can cause an error, but taking in a reference shows that the argument can't be null.
+
 7/11/2020:
 	Created an entity assembler class that returns an Entity with certain components attached. The idea here is to create a "blueprint" of objects so that we can check things about entities without actually having to create an entity. For example, if I were making an object that is always 64x64, I could find this out by looking at an object's assmebler and not have to actually create the object. If I were to then create the object, I'd call the assembler's assemble method. Currently, the assemble method returns an entity on the heap. The reason we do this instead of taking in an entity and adding components is because classes like Object and Structure expect the object to already have certain components at construction. We can't create an empty Object and then pass it into the assembler. In hindsight, this may be a better approach but we already have too much built around the idea of Object and Structure to change it. 
 
