Friendly units will now attack enemies nearby unless commanded to move twice

--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,11 @@
 This document keeps track of all changes as well as considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+8/6/2020:
+	Removed ShootComponent and instead added attacking from a distance to AttackComponent. Making melee attacks is essentially a ranged attack with a range of 0, so it doesn't make sense to have 2 different components when one is all that's needed.
+
+8/5/2020:
+	For some reason, even though ApproachComponent::findNearestUnit<T>() is a templated function, implementing it in a .cpp file has worked fine until today, presumably because the only function that uses it is ResourceEatComponent::update, which is also in entities.cpp. Today, another file needed the function, which triggered an "undefined reference" error. Putting findNearestUnit<T>() to the header file didn't fix this as the function refers to GameWindow, but #include "game.h" in entities.h causes a circular dependency. I also tried to move the function to a .tpp file, but this did nothing as I still had to do #include "entities.tpp" in the .h file, which is basically the same thing as putting the function in entities.h file but with extra steps. Since the problem is the reference to GameWindow, the function now takes in an extra parameter, which is the RawQuadTree to search on. This eliminates any mention of GameWindow in entities.h until another templated function screws everything up. 
+
 7/29/2020:
 	Encountered an issue with the assembler paradigm. Because Units and Objects are so deeply integrated into our code, we have to use them. In the future, it may be more convenient to only use Entities, since they are so much more flexible. The problem with Unit and Objects stems from the original reason for their creation, which was the observation that all objects in our game have to have certain components, such as a position component (RectComponent), a sprite (RenderComponent), and can be clicked on (ClickableComponent). In order to ensure that these objects will always have these components, these objects' constructors required these components to be provided. Problem is, we are now moving to the assembler design which has the benefit of giving us the stats of an object without actually having to create an object. When creating an object through an assembler, the assembler takes the stats and slaps it on an object. The question is what components to use. Spawning ants may have a different ClickableComponent than an enemy. The easiest solution is to do something like this : 
 
